WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270614
[visionOS] AudioSession interruptions do not stop playback
https://bugs.webkit.org/show_bug.cgi?id=270614
Summary
[visionOS] AudioSession interruptions do not stop playback
Jean-Yves Avenard [:jya]
Reported
2024-03-06 19:42:06 PST
Test Configuration: - Vision Pro - Steps to Reproduce: 1) Launch Music app and play a song 2) Launch Surfboard and open Safari, go to youtube.com, play the video => Music will pause, YouTube video will play 3) Go back to Music app and press play => Music will resume for a second then pauses unexpectedly, if I press play again, then Music will resume fine This bug was fixed in
bug 259887
, but it was later reverted due to MSE regression.
Attachments
Add attachment
proposed patch, testcase, etc.
Jean-Yves Avenard [:jya]
Comment 1
2024-03-06 19:42:17 PST
rdar://116891193
Jean-Yves Avenard [:jya]
Comment 2
2024-03-06 20:00:55 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25565
EWS
Comment 3
2024-03-08 08:26:41 PST
Committed
275838@main
(f25ae590196b): <
https://commits.webkit.org/275838@main
> Reviewed commits have been landed. Closing PR #25565 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug